--- a/src/main/resources/assets/lightestlamp/lang/en_us.json
+++ b/src/main/resources/assets/lightestlamp/lang/en_us.json
@@ -123,10 +123,17 @@
 	"tooltip.lightestlamp.xenon_filter": "Xenon",
 	"tooltip.lightestlamp.radon_filter": "Radon",
 	"tooltip.lightestlamp.bromine_filter": "Bromine",
-	"tooltip.lightestlamp.lamp.wip": "[WIP]",
+	"tooltip.lightestlamp.lamp.wip": "",
 	"tooltip.lightestlamp.hold0": "Hold ",
 	"tooltip.lightestlamp.hold1": "Shift",
 	"tooltip.lightestlamp.hold2": " for full description.",
+
+	"tooltip.lightestlamp.machine.redstone_ignore": "Mode: Ignore Redstone",
+	"tooltip.lightestlamp.machine.redstone_off": "Mode: Redstone off",
+	"tooltip.lightestlamp.machine.redstone_on": "Mode: Redstone on",
+	"tooltip.lightestlamp.machine.passive_mode": "Mode: Passive Mode¬§7Machine dosn't require any energy.¬§cEfficiency -80%¬§aPower Consumption: -100%",
+	"tooltip.lightestlamp.machine.normal_mode": "Mode: Normal¬§7Machine works normally.¬§7Machine require LV-MV power tier.",
+	"tooltip.lightestlamp.machine.overclock_mode": "Mode: Overclocked¬§7Machine is more efficient but requires more power.¬§7Machine require HV power tier.¬§aEfficiency +100%¬§cPower Consumption: +60%",
 
 	"container.gascentrifuge": "Glowstone Centrifuge",
 
