Add Minotaur to build.gradle

--- a/src/main/resources/assets/lightestlamp/lang/en_us.json
+++ b/src/main/resources/assets/lightestlamp/lang/en_us.json
@@ -72,7 +72,7 @@
 
 	"item.lightestlamp.neon_pile":"Neon Pile",
 	"item.lightestlamp.argon_pile":"Argon Pile",
-	"item.lightestlamp.krypton_small_dust":"Krypton Pile",
+	"item.lightestlamp.krypton_pile":"Krypton Pile",
 	"item.lightestlamp.xenon_pile":"Xenon Pile",
 	"item.lightestlamp.radon_pile":"Radon Pile",
 	"item.lightestlamp.lanthanum_small_dust":"Lanthanum Pile",
